# AtlasEngine

./: .gitignore  CMakeLists.txt  README.md
include/ImGui/: imgui.cpp  imstb_truetype.h
include/ImGui/backends/: imgui_impl_dx11.cpp  imgui_impl_win32.cpp  imgui_impl_win32.h
include/ImGui/examples/example_emscripten_wgpu/: main.cpp
include/ImGui/examples/example_glfw_opengl2/: main.cpp
include/ImGui/examples/example_glfw_opengl3/: main.cpp
include/ImGui/examples/example_glfw_vulkan/: main.cpp
src/: CMakeLists.txt  main.cpp
src/Shader/: GameObject.fx  shader.fx
src/private/Camera/: Camera.cpp  EditorCamera.cpp
src/private/Editor/: Editor.cpp
src/private/Engine/: ConstantBuffer.cpp  Core.cpp  Debugger.cpp  Error.cpp  Input.cpp  Shader.cpp  Window.cpp
src/private/Engine/GameObject/: Component.cpp  GameObject.cpp
src/private/Engine/GameObject/Components/: Mesh.cpp
src/private/Engine/Scene/: Scene.cpp  SceneManager.cpp
src/private/Math/: Transform.cpp  Vector3.cpp
src/private/Module/: Time.cpp  Util.cpp
src/public/Editor/: Editor.h
src/public/Engine/: ConstantBuffer.h  Core.h  Debugger.h  Error.h  Input.h  Shader.h  Vertex.h  Window.h
src/public/Engine/Camera/: Camera.h  EditorCamera.h
src/public/Engine/GameObject/: Component.h  GameObject.h
src/public/Engine/GameObject/Components/: Mesh.h
src/public/Engine/Scene/: Scene.h  SceneManager.h
src/public/Math/: Transform.h  Vector3.h
src/public/Module/: Time.h  Util.h
